--- a/server/database/docker-compose.yml
+++ b/server/database/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   # Mongodb service
   mongo_db:
@@ -13,7 +11,7 @@ services:
 
   # Node api service
   api:
-    image: nodeapp
+    build: .
     ports:
       - 3030:3030
     depends_on: 
