--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -38,5 +38,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
-  }
+  },
+  "proxy": "http://127.0.0.1:8000"
 }
